--- a/sloan-privacy-bibliography.tex
+++ b/sloan-privacy-bibliography.tex
@@ -20,7 +20,7 @@ pdfsubject={Bibliography},%
 \usepackage[citestyle=authoryear,maxnames=10,backend=biber]{biblatex}
 
 \nocite{*}
-\author{lars.vilhuber }
+\author{John Abowd, Ian Schmutte, William Sexton, Lars Vilhuber}
 \date{\today}
 
 
