--- a/library.bib
+++ b/library.bib
@@ -17,10 +17,10 @@ pages = {69-78},
 year  = {2011},
 publisher = {Routledge},
 doi = {10.1080/01615440.2011.561778},
-xURL = { 
+xURL = {
         https://doi.org/10.1080/01615440.2011.561778
 },
-eprint = { 
+eprint = {
         https://doi.org/10.1080/01615440.2011.561778
 }
 ,
@@ -32,7 +32,7 @@ eprint = {
  author = "Leonard E. Burman and Alex Engler and Surachai Khitatrakun and James R. Nunns and Sarah Armstrong",
  institution = "Tax Policy Center, Urban Institute and Brookings Institution",
  year = "2017",
- month = "June",
+ month = "6",
  xurl = {https://www.taxpolicycenter.org/sites/default/files/publication/142421/2001396-a-synthetic-income-tax-return-data-file-tentative-work-plan_and_discussion_draft.pdf}
 }
 
@@ -82,7 +82,7 @@ eprint = {
   author       = {{U.S.~Department of Commerce}},
   title        = {{U.S.\ Department of Commerce Announces Reinstatement of Citizenship Question to the 2020 Decennial Census}},
   howpublished = {\url{https://www.commerce.gov/news/press-releases/2018/03/us-department-commerce-announces-reinstatement-citizenship-question-2020}},
-  month        = {Mar},
+  month        = {3},
   year         = {2018},
   note         = {Accessed: March 13, 2018},
 }
@@ -99,7 +99,7 @@ author = {Ding, Bolin and Kulkarni, Janardhan and Yekhanin, Sergey},
 title = {Collecting Telemetry Data Privately},
 journal = {Advances in Neural Information Processing Systems 30},
 year = {2017},
-month = {December},
+month = {12},
 abstract = {The collection and analysis of telemetry data from user’s devices is routinely performed by many software companies. Telemetry collection leads to improved user experience but poses significant risks to users’ privacy. Locally differentially private (LDP) algorithms have recently emerged as the main tool that allows data collectors to estimate various population statistics, while preserving privacy. The guarantees provided by such algorithms are typically very strong for a single round of telemetry collection, but degrade rapidly when telemetry is collected regularly. In particular, existing LDP algorithms are not suitable for repeated collection of counter data such as daily app usage statistics. In this paper, we develop new LDP mechanisms geared towards repeated collection of counter data, with formal privacy guarantees even after being executed for an arbitrarily long period of time. For two basic analytical tasks, mean estimation and histogram estimation, our LDP mechanisms for repeated data collection provide estimates with comparable or even the same accuracy as existing single-round LDP collection mechanisms. We conduct empirical evaluation on real-world counter datasets to verify our theoretical results. Our mechanisms have been deployed by a Fortune 500 company to collect telemetry across millions of devices.},
 xurl = {https://www.microsoft.com/en-us/research/publication/collecting-telemetry-data-privately/}
 }
@@ -147,7 +147,7 @@ author = {McSherry, Frank},
 title = {Privacy Integrated Queries},
 journal = {Proceedings of the 2009 ACM SIGMOD International Conference on Management of Data (SIGMOD)},
 year = {2009},
-month = {June},
+month = {6},
 abstract = {We report on the design and implementation of the Privacy Integrated Queries (PINQ) platform for privacy-preserving data analysis. PINQ provides analysts with a programming interface to unscrubbed data through a SQL-like language. At the same time, the design of PINQ's analysis language and its careful implementation provide formal guarantees of differential privacy for any and all uses of the platform. PINQ's unconditional structural guarantees require no trust placed in the expertise or diligence of the analysts, substantially broadening the scope for design and deployment of privacy-preserving data analysis, especially by non-experts.
 },
 publisher = {Association for Computing Machinery, Inc.},
@@ -187,7 +187,7 @@ url = {\url{https://www.microsoft.com/en-us/research/publication/privacy-integra
  series = "Internal Report",
  number = "8053",
  year = "2015",
- month = "October"
+ month = 10
 }
 
 @techreport{Jack:Environmental:WP:2017,
@@ -334,7 +334,7 @@ url = {\url{https://www.microsoft.com/en-us/research/publication/privacy-integra
   year        = {2017},
   type        = {Working Paper},
   number      = {23927},
-  month       = {October},
+  month       = {10},
   abstract    = {This paper describes results of a pair of incentivized experiments on biases in judgments about random samples. Consistent with the Law of Small Numbers (LSN), participants exaggerated the likelihood that short sequences and random subsets of coin flips would be balanced between heads and tails. Consistent with the Non-Belief in the Law of Large Numbers (NBLLN), participants underestimated the likelihood that large samples would be close to 50\% heads. However, we identify some shortcomings of existing models of LSN, and we find that NBLLN may not be as stable as previous studies suggest. We also find evidence for exact representativeness (ER), whereby people tend to exaggerate the likelihood that samples will (nearly) exactly mirror the underlying odds, as an additional bias beyond LSN. Our within-subject design of asking many different questions about the same data lets us disentangle the biases from possible rational alternative interpretations by showing that the biases lead to inconsistency in answers. Our design also centers on identifying and controlling for bin effects, whereby the probability assigned to outcomes systematically depends on the categories used to elicit beliefs in a way predicted by support theory. The bin effects are large and systematic and affect some results, but we find LSN, NBLLN, and ER even after controlling for them.},
   doi         = {10.3386/w23927},
   url        = {http://www.nber.org/papers/w23927},
@@ -402,7 +402,7 @@ url="https://doi.org/10.1007/978-3-642-29420-4_3"
  issue_date = {June 2016},
  volume = {4},
  number = {3},
- month = mar,
+ month = 3,
  year = {2016},
  issn = {2167-8375},
  pages = {13:1--13:30},
@@ -577,7 +577,7 @@ type = {Working Paper},
 series = {Working Paper Series},
 number = {23488},
 year = {2017},
-month = {June},
+month = {6},
 doi = {10.3386/w23488},
 URL = {http://www.nber.org/papers/w23488}
 }
@@ -619,7 +619,7 @@ journal = {J. ACM},
 issue_date = {November 2014},
 volume = {61},
 number = {6},
-month = dec,
+month = 12,
 year = {2014},
 issn = {0004-5411},
 pages = {38:1--38:57},
@@ -976,7 +976,7 @@ journal = "JSM Proceedings, Government Statistics Section",
   volume    = {67},
   number    = {2},
   pages     = {251--333},
-  month     = mar,
+  month     = 3,
   abstract  = {We study a longitudinal sample of over one million French workersfrom
  more than five hundred thousand employing firms. We decompose real
  total annual compensation per worker into components related to observable
@@ -1823,7 +1823,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   volume    = {81},
   number    = {393},
   pages     = {10--18},
-  month     = mar,
+  month     = 3,
   owner     = {John Abowd},
   timestamp = {2014.12.19},
 }
@@ -2302,7 +2302,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   title     = {{Report on Statistical Disclosure Limitation Methodology}},
   year      = {2005},
   volume    = {22},
-  number    = {December},
+  number    = {12},
   pages     = {137},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -2313,7 +2313,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   title       = {Report on statistical disclosure limitation methodology},
   institution = {Statistical and Science Policy, Office of Information and Regulatory Affairs, Office of Management and Budget},
   year        = {2005},
-  month       = dec,
+  month       = 12,
   owner       = {John Abowd},
   timestamp   = {2014.12.27},
   xurlx       = {https://fcsm.sites.usa.gov/files/2014/04/spwp22.pdf},
@@ -2457,7 +2457,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   volume    = {102},
   number    = {6},
   pages     = {460--465},
-  month     = dec,
+  month     = 12,
   doi       = {DOI: 10.1511/2014.111.460},
   owner     = {John Abowd},
   timestamp = {2016.07.08},
@@ -2967,7 +2967,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   author    = {Khan, Shakeeb and Nekipelov, Denis},
   title     = {{Information Structure and Statistical Information in Discrete Response Models}},
   year      = {2012},
-  number    = {January},
+  number    = {1},
   pages     = {3--75},
   abstract  = {Strategic interaction parameters characterize the impact of actions of one economic agent on the payoff of another economic agent. In this paper we study how the in- formation available to economic agents regarding other economic agents can influence the ability of an econometrician to recover strategic information parameters from the observed actions. We consider two extreme cases: the complete information case where the information sets of participating economic agents coincide, and the incomplete in- formation case where each agent has a privately observable type. We find that in models with incomplete information the statistical (Fisher) information for the inter- action parameters is zero, implying that estimation and inference become nonstandard. In contrast, in the incomplete information models with any non-zero variance of player types, the statistical information is positive, implying the existence of regular estima- tors for these parameters converging at the parametric rate. This finding is illustrated in two cases: treatment effect models (expressed as a triangular system of equations), and the static game models. In both types of models the observed discrete outcomes are driven by continuously distributed errors with an unknown distribution (unob- served heterogeneity). We find that the key factor driving the result in these models is the relative tail behavior of the distribution of unobserved heterogeneity of economic agents' payoffs and the distribution of covariates. Our result has important impli- cations for experimental design in economic systems where unobserved heterogeneity plays a major role: a failure to provide sufficient independent randomization of the payoffs of participating agents may lead to non-robustness of estimated parameters to the distribution of unobserved heterogeneity.},
   keywords  = {Endogenous discrete response,optimal convergence rate,static game,strategic interaction.},
@@ -3288,7 +3288,7 @@ We provide a formal analysis of the error of query answers produced by the mecha
   year       = {2007},
   volume     = {1},
   number     = {1},
-  month      = mar,
+  month      = 3,
   issn       = {1556-4681},
   abstract   = {In this article, we show using two simple attacks that a k-anonymized dataset has some subtle but severe privacy problems. First, an attacker can discover the values of sensitive attributes when there is little diversity in those sensitive attributes. This is a known problem. Second, attackers often have background knowledge, and we show that k-anonymity does not guarantee privacy against attackers using background knowledge. We give a detailed analysis of these two attacks, and we propose a novel and powerful privacy criterion called L-diversity that can defend against such attacks. In addition to building a formal foundation for L-diversity, we show in an experimental evaluation that L-diversity is practical and can be implemented efficiently.},
   acmid      = {1217302},
@@ -3310,7 +3310,7 @@ Journal = {Journal of Economic Literature},
 Volume = {53},
 Number = {3},
 Year = {2015},
-Month = {September},
+Month = {9},
 Pages = {631-53},
 DOI = {10.1257/jel.53.3.631},
 xURL = {http://www.aeaweb.org/articles?id=10.1257/jel.53.3.631}
@@ -3931,7 +3931,7 @@ instead of a hierarchy.},
   Journal                  = {Journal of Legal Studies},
   Year                     = {1980},
 
-  Month                    = dec,
+  Month                    = 12,
   Number                   = {4},
   Pages                    = {623--644},
   Volume                   = {9},
@@ -4114,13 +4114,14 @@ Book: The rapid growth of electronic commerce, along with changes in information
   url      = {http://onlinelibrary.wiley.com/doi/10.1111/1467-6451.00133/full$\backslash$nhttp://doi.wiley.com/10.1111/1467-6451.00133},
 }
 
+%%%% ERROR
 @Article{Varian1998,
   author    = {Varian, Hal R},
   title     = {{Markets for Information Goods}},
   journal   = {October},
   year      = {1998},
   volume    = {1998},
-  number    = {April},
+  number    = {4},
   pages     = {1--19},
   abstract  = {Much has been written about the difficulties that ``information'' poses for neoclassical economics. How ironic that ICE-information, communication, and entertainment-now comprises the largest sector in the American economy. If information poses problems for economic theory, so much the worse for economic theory: real markets seem to deal with information rather well. This paradox is the central theme of this essay: information, that slippery and strange economic good, is, in fact, handled very well by market institutions. The reason is that real markets are much more creative than those simple competitive markets studied in Econ 1. The fact that real-life markets can handle a good as problematic as is a testament to the flexibility and robustness of market institutions.},
   owner     = {vilhuber},
@@ -4235,7 +4236,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   keywords  = {data mining,degrees of freedom,effect of model selection,goodness-of-fit,half-normal plot,nonparametric regression,sensitivity},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url      = {http://www.tandfonline.com/doi/abs/10.1080/01621459.1998.10474094$\backslash$nhttp://dx.doi.org/10.1080/01621459.1998.10474094$\backslash$nhttp://www.jstor.org/stable/2669609},
+  url      = {http://www.tandfonline.com/doi/abs/10.1080/01621459.1998.10474094},
 }
 
 @Article{Zhou2009,
@@ -4333,7 +4334,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
 
 @Misc{apple:2016,
   title = {Apple previews {iOS} 10, the biggest {iOS} release ever},
-  month = {June},
+  month = {6},
   year = {2016},
   note  = {Cited on March 5, 2017},
   url   = {http://www.apple.com/newsroom/2016/06/apple-previews-ios-10-biggest-ios-release-ever.html},
@@ -4392,7 +4393,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   volume   = {14},
   number   = {4},
   pages    = {485},
-  month    = dec,
+  month    = 12,
   note     = {Copyright - Copyright Statistics Sweden (SCB) Dec 1998; Last updated - 2013-01-07},
   abstract = {During the past twenty-five years, the field of disclosure protection has undergone a "statistical transformation' and has begun to utilize the advances that have occurred within the field of statistics itself as well as in a variety of areas of application. This article reexamines some of the approaches currently employed in statistical disclosure limitation methodology for categorical data, e.g., cell suppression and data swapping, and relates them to the more conventional statistical methods associated with loglinear models and the simulation of exact distributions. It ties this perturbation approach to a general framework for the use of simulated data which we described earlier in Fienberg (1996) and Fienberg, Steele, and Makov (1996).},
   keywords = {Statistics; Bootstrap; cell suppression; confidentiality; contingency table analysis; data swapping; loglinear models; multiple imputation},
@@ -4728,7 +4729,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   volume     = {60},
   number     = {4},
   pages      = {86--93},
-  month      = mar,
+  month      = 3,
   acmid      = {3051088},
   address    = {New York, NY, USA},
   doi        = {10.1145/3051088},
@@ -4900,7 +4901,7 @@ eprint = {
   author       = {Charles Bean},
   title        = {Independent review of UK economic statistics},
   howpublished = {Cabinet Office, HM Treasury, The Rt Hon Matt Hancock, and The Rr Hon George Osborne},
-  month        = mar,
+  month        = 3,
   year         = {2016},
 }
 
@@ -4928,7 +4929,7 @@ abstract={Differential privacy is widely accepted as a powerful framework for pr
 keywords={data protection;PDP;aggregate data analysis;exponential mechanism;formal privacy guarantees;personalized differential privacy;primary mechanism;privacy level;privacy protection;real data;synthetic data;utility level;Lead;Privacy},
 doi={10.1109/ICDE.2015.7113353},
 ISSN={1063-6382},
-month={April},}
+month={4},}
 
 @InProceedings{Evfimievski:2003,
   author    = {Alexandre Evfimievski and Johannes Gehrke and Ramakrishnan Srikant},
@@ -5022,7 +5023,7 @@ month={April},}
   volume    = {33},
   number    = {4},
   pages     = {531},
-  month     = dec,
+  month     = 12,
   issn      = {0282-423X, 2001-7367},
   abstract  = {Several statistical agencies have started to use multiply-imputed
               synthetic microdata to create public-use data in major surveys.
@@ -5183,7 +5184,7 @@ month={April},}
 @Misc{RepArchive:Abowd:Revisiting:LDI:2018,
   author    = {Abowd, John M and Schmutte, Ian M},
   title     = {Replication archive for: {R}evisiting the economics of privacy: {P}opulation statistics and confidentiality protection as public goods},
-  month     = mar,
+  month     = 3,
   year      = {2018},
   note      = {Abowd acknowledges direct support from the U.S. Census Bureau and from NSF Grants BCS- 0941226, TC-1012593 and SES-1131848. Some of the research for this paper was conducted using the resources of the Social Science Gateway, which was partially supported by NSF grant SES-0922005. This paper was written while the first author was Distinguished Senior Research Fellow at the Census Bureau.},
   abstract  = {Replication archive for http://digitalcommons.ilr.cornell.edu/ldi/22/},
@@ -5196,7 +5197,7 @@ month={April},}
 {RepArchive:Abowd:Privacy:LDI:2018,
   author    = {Abowd, John M. and Schmutte, Ian M.},
   title     = {Replication archive for: {A]n Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
-  month     = mar,
+  month     = 3,
   year      = {2018},
   doi       = {10.5281/zenodo.1208758},
   publisher = {Zenodo},
@@ -5230,7 +5231,7 @@ month={April},}
   year        = {2018},
   type        = {Working Paper},
   number      = {24253},
-  month       = {January},
+  month       = {1},
   abstract    = {Thanks to big data, artificial intelligence (AI) has spurred exciting innovations. In the meantime, AI and big data are reshaping the risk in consumer privacy and data security. In this essay, I first define the nature of the problem and then present a few facts about the ongoing risk. The bulk of the essay describes how the U.S. market copes with the risk in current policy environment. It concludes with key challenges facing researchers and policy makers.},
   doi         = {10.3386/w24253},
   series      = {Working Paper Series},
@@ -5243,7 +5244,7 @@ month={April},}
   booktitle = {2012 IEEE 28th International Conference on Data Engineering},
   year      = {2012},
   pages     = {20-31},
-  month     = {April},
+  month     = {4},
   doi       = {10.1109/ICDE.2012.16},
   issn      = {1063-6382},
   keywords  = {data privacy;indexing;quadtrees;data distribution;differential privacy;differentially private spatial decompositions;kd-trees;multi-dimensional data;parameter setting;quad trees;query answers;standard spatial indexing methods;tree structure;Accuracy;Data privacy;Noise;Noise measurement;Privacy;Spatial databases;Vegetation},
@@ -5290,7 +5291,7 @@ month={April},}
   author       = {{U}nited {N}ations {G}eneral {A}ssembly},
   title        = {Fundamental Principles of Official Statistics},
   howpublished = {{R}esolution of the {A}ssembly {A/RES/68/261}},
-  month        = mar,
+  month        = 3,
   year         = {2014},
   url          = {https://unstats.un.org/unsd/dnss/gp/FP-New-E.pdf},
 }
@@ -5308,7 +5309,7 @@ month={April},}
   title       = {The Promise of Evidence-Based Policymaking: {R}eport of the {Commission on Evidence-Based Policymaking}},
   institution = {Government Printing Office},
   year        = {2017},
-  month       = {September},
+  month       = {9},
   url         = {https://www.cep.gov/content/dam/cep/report/cep-final-report.pdf},
 }
 
@@ -5350,9 +5351,9 @@ month={April},}
   year      = {2008},
   volume    = {4},
   number    = {8},
-  pages     = {1-9},
+  pages     = {1--9},
   month     = {08},
-  abstract  = {Author Summary In this report we describe a framework for accurately and robustly resolving whether individuals are in a complex genomic DNA mixture using high-density single nucleotide polymorphism (SNP) genotyping microarrays. We develop a theoretical framework for detecting an individual's presence within a mixture, show its limits through simulation, and finally demonstrate experimentally the identification of the presence of genomic DNA of individuals within a series of highly complex genomic mixtures. Our approaches demonstrate straightforward identification of trace amounts (<1%) of DNA from an individual contributor within a complex mixture. We show how probe-intensity analysis of high-density SNP data can be used, even given the experimental noise of a microarray. We discuss the implications of these findings in two fields: forensics and genome-wide association (GWA) genetic studies. Within forensics, resolving whether an individual is contributing trace amounts of genomic DNA to a complex mixture is a tremendous challenge. Within GWA studies, there is a considerable push to make experimental data publicly available so that the data can be combined with other studies. Our findings show that such an approach does not completely conceal identity, since it is straightforward to assess the probability that a person or relative participated in a GWA study.},
+  abstract  = {Author Summary In this report we describe a framework for accurately and robustly resolving whether individuals are in a complex genomic DNA mixture using high-density single nucleotide polymorphism (SNP) genotyping microarrays. We develop a theoretical framework for detecting an individual's presence within a mixture, show its limits through simulation, and finally demonstrate experimentally the identification of the presence of genomic DNA of individuals within a series of highly complex genomic mixtures. Our approaches demonstrate straightforward identification of trace amounts (<1 pct) of DNA from an individual contributor within a complex mixture. We show how probe-intensity analysis of high-density SNP data can be used, even given the experimental noise of a microarray. We discuss the implications of these findings in two fields: forensics and genome-wide association (GWA) genetic studies. Within forensics, resolving whether an individual is contributing trace amounts of genomic DNA to a complex mixture is a tremendous challenge. Within GWA studies, there is a considerable push to make experimental data publicly available so that the data can be combined with other studies. Our findings show that such an approach does not completely conceal identity, since it is straightforward to assess the probability that a person or relative participated in a GWA study.},
   doi       = {10.1371/journal.pgen.1000167},
   publisher = {Public Library of Science},
   url       = {https://doi.org/10.1371/journal.pgen.1000167},
@@ -5382,7 +5383,7 @@ month={April},}
   institution = {U.S. Federal Committee on Statistical Methodology},
   year        = {2005},
   type        = {Research Report},
-  month       = {Dec},
+  month       = {12},
   owner       = {Cameron},
   timestamp   = {2015.02.05},
 }
@@ -5613,19 +5614,19 @@ month={April},}
   url          = {https://www.law.cornell.edu/supct/html/98-404.ZO.html},
 }
 
-@INPROCEEDINGS{6297917, 
-author={A. Ramachandran and L. Singh and E. Porter and F. Nagle}, 
-booktitle={2012 Tenth Annual International Conference on Privacy, Security and Trust}, 
-title={Exploring re-identification risks in public domains}, 
-year={2012}, 
-volume={}, 
-number={}, 
-pages={35-42}, 
-abstract={While re-identification of sensitive data has been studied extensively, with the emergence of online social networks and the popularity of digital communications, the ability to use public data for re-identification has increased. This work begins by presenting two different cases studies for sensitive data re-identification. We conclude that targeted re-identification using traditional variables is not only possible, but fairly straightforward given the large amount of public data available. However, our first case study also indicates that large-scale re-identification is less likely. We then consider methods for agencies such as the Census Bureau to identify variables that cause individuals to be vulnerable without testing all combinations of variables. We show the effectiveness of different strategies on a Census Bureau data set and on a synthetic data set.}, 
-keywords={security of data;social networking (online);census bureau data set;data reidentification risk;digital communication;large-scale reidentification;online social network;public data;public domain;sensitive data reidentification;Accuracy;Data privacy;Databases;Facebook;Sociology;Twitter}, 
-doi={10.1109/PST.2012.6297917}, 
-ISSN={}, 
-month={July},
+@INPROCEEDINGS{6297917,
+author={A. Ramachandran and L. Singh and E. Porter and F. Nagle},
+booktitle={2012 Tenth Annual International Conference on Privacy, Security and Trust},
+title={Exploring re-identification risks in public domains},
+year={2012},
+volume={},
+number={},
+pages={35-42},
+abstract={While re-identification of sensitive data has been studied extensively, with the emergence of online social networks and the popularity of digital communications, the ability to use public data for re-identification has increased. This work begins by presenting two different cases studies for sensitive data re-identification. We conclude that targeted re-identification using traditional variables is not only possible, but fairly straightforward given the large amount of public data available. However, our first case study also indicates that large-scale re-identification is less likely. We then consider methods for agencies such as the Census Bureau to identify variables that cause individuals to be vulnerable without testing all combinations of variables. We show the effectiveness of different strategies on a Census Bureau data set and on a synthetic data set.},
+keywords={security of data;social networking (online);census bureau data set;data reidentification risk;digital communication;large-scale reidentification;online social network;public data;public domain;sensitive data reidentification;Accuracy;Data privacy;Databases;Facebook;Sociology;Twitter},
+doi={10.1109/PST.2012.6297917},
+ISSN={},
+month={7},
 }
 
 @Article{abowd:fcsm:2016,
@@ -5633,7 +5634,7 @@ month={July},
   title     = {Why Statistical Agencies Need to Take Privacy-loss Budgets Seriously, and What It Means When They Do},
   journal = {The 13th Biennial Federal Committee on Statistical Methodology (FCSM) Policy Conference},
   year      = {2016},
-  month     = dec,
+  month     = 12,
   note      = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
   url       = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
