econ of privacy refs from Avi Goldfarb

--- a/library.bib
+++ b/library.bib
@@ -5650,4 +5650,96 @@ month={7},
   url         = {https://www.census.gov/about/cac/sac/meetings/2017-09-meeting.html},
 }
 
+@Article{Goldfarb:Privacy:MS:2011,
+  author   = {Goldfarb, Avi and Tucker, Catherine},
+  title    = {Privacy Regulation and Online Advertising},
+  journal  = {Management Science},
+  year     = {2011},
+  volume   = {57},
+  number   = {1},
+  pages    = {57-71},
+  abstract = {Advertisers use online customer data to target their marketing appeals. This has heightened consumers' privacy concerns, leading governments to pass laws designed to protect consumer privacy by restricting the use of data and by restricting online tracking techniques used by websites. We use the responses of 3.3 million survey takers who had been randomly exposed to 9,596 online display (banner) advertising campaigns to explore how privacy regulation in the European Union (EU) has influenced advertising effectiveness. This privacy regulation restricted advertisers' ability to collect data on Web users in order to target ad campaigns. We find that, on average, display advertising became far less effective at changing stated purchase intent after the EU laws were enacted, relative to display advertising in other countries. The loss in effectiveness was more pronounced for websites that had general content (such as news sites), where non-data-driven targeting is particularly hard to do. The loss of effectiveness was also more pronounced for ads with a smaller presence on the webpage and for ads that did not have additional interactive, video, or audio features. This paper was accepted by Pradeep Chintagunta, marketing.},
+  keywords = {privacy; online advertising; targeting; economics},
+  url      = {https://EconPapers.repec.org/RePEc:inm:ormnsc:v:57:y:2011:i:1:p:57-71},
+}
+
+@Article{Goldfarb:Shifts:AERPP:2012,
+  author   = {Goldfarb, Avi and Tucker, Catherine},
+  title    = {Shifts in Privacy Concerns},
+  journal  = {American Economic Review},
+  year     = {2012},
+  volume   = {102},
+  number   = {3},
+  pages    = {349-53},
+  month    = {May},
+  doi      = {10.1257/aer.102.3.349},
+  keywords = {economics; privacy; economics of privacy; measurement; privacy measurement},
+  url      = {http://www.aeaweb.org/articles?id=10.1257/aer.102.3.349},
+}
+
+@Article{Campbell:Privacy:JEMS:,
+  author   = {Campbell, James and Goldfarb, Avi and Tucker, Catherine},
+  title    = {Privacy Regulation and Market Structure},
+  journal  = {Journal of Economics \& Management Strategy},
+  year     = {2015},
+  volume   = {24},
+  number   = {1},
+  pages    = {47-73},
+  abstract = {This paper models how regulatory attempts to protect the privacy of consumers' data affect the competitive structure of data-intensive industries. Our results suggest that the commonly used consent-based approach may disproportionately benefit firms that offer a larger scope of services. Therefore, though privacy regulation imposes costs on all firms, it is small firms and new firms that are most adversely affected. We then show that this negative effect will be particularly severe for goods where the price mechanism does not mediate the effect, such as the advertising-supported Internet.},
+  doi      = {10.1111/jems.12079},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/jems.12079},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jems.12079},
+}
+
+@TechReport{Brynjolfsson:Data:CESWP:2016,
+  author      = {Brynjolfsson, Erik and McElheran, Kristina},
+  title       = {Data in Action: Data-Driven Decision Making in U.S. Manufacturing},
+  institution = {U.S. Census Bureau, Center for Economic Studies},
+  year        = {2016},
+  type        = {Working Papers},
+  abstract    = {Manufacturing in America has become significantly more data-intensive. We investigate the adoption, performance effects and organizational complementarities of data-driven decision making (DDD) in the U.S. Using data collected by the Census Bureau for 2005 and 2010, we observe the extent to which manufacturing firms track and use data to guide decision making, as well as their investments in information technology (IT) and the use of other structured management practices. Examining a representative sample of over 18,000 plans, we find that adoption of DDD is earlier and more prevalent among larger, older plants belonging to multi-unit firms. Smaller single-establishment firms adopt later but have a higher correlation with performance than similar non-adopters. Using a fixed-effects estimator, we find the average value-added for later DDD adopters to be 3% greater than non-adopters, controlling for other inputs to production. This effect is distinct from that associated with IT and other structured management practices and is concentrated among single-unit firms. Performance improves after plants adopt DDD, but not before ? consistent with a causal relationship. However, DDD-related performance differentials decrease over time for early and late adopters, consistent with firm learning and development of organizational complementarities. Formal complementarity tests suggest that DDD and high levels of IT capital reinforce each other, as do DDD and skilled workers. For some industries, the benefits of DDD adoption appear to be greater for plants that delegate some decision making to frontline workers.},
+  url         = {https://EconPapers.repec.org/RePEc:cen:wpaper:16-06},
+}
+
+@Article{Brynjolfsson:DDD:AERPP:2016,
+  author  = {Brynjolfsson, Erik and McElheran, Kristina},
+  title   = {The Rapid Adoption of Data-Driven Decision-Making},
+  journal = {American Economic Review},
+  year    = {2016},
+  volume  = {106},
+  number  = {5},
+  pages   = {133-39},
+  month   = {May},
+  doi     = {10.1257/aer.p20161016},
+  url     = {http://www.aeaweb.org/articles?id=10.1257/aer.p20161016},
+}
+
+@TechReport{Jia:GDPR:NBER:2018,
+  author      = {Jia, Jian and Jin, Ginger Zhe and Wagman, Liad},
+  title       = {The Short-Run Effects of GDPR on Technology Venture Investment},
+  institution = {National Bureau of Economic Research},
+  year        = {2018},
+  type        = {Working Paper},
+  number      = {25248},
+  month       = {November},
+  abstract    = {The General Data Protection Regulation (GDPR) came into effect in the European Union in May 2018. We study its short-run impact on investment in new and emerging technology firms. Our findings indicate negative post-GDPR effects on EU ventures, relative to their US counterparts. The negative effects manifest in the overall dollar amounts raised across funding deals, the number of deals, and the dollar amount raised per individual deal.},
+  doi         = {10.3386/w25248},
+  series      = {Working Paper Series},
+  url         = {http://www.nber.org/papers/w25248},
+}
+
+@Article{Kim:Screening:RAND:2015,
+  author   = {Kim, Jin-Hyuk and Wagman, Liad},
+  title    = {Screening incentives and privacy protection in financial markets: a theoretical and empirical analysis},
+  journal  = {The RAND Journal of Economics},
+  year     = {2015},
+  volume   = {46},
+  number   = {1},
+  pages    = {1-22},
+  abstract = {We study a model in which firms offer financial products to individuals, post prices for their products, and screen consumers who apply to purchase them. Any information obtained in the screening process may be traded to another firm selling related products. We show that firms' ability to sell consumer information can lead to lower prices, higher screening intensities, and increased social welfare. By exploiting variations in the adoption of local financial-privacy ordinances in five California Bay Area counties, we are able to provide simple estimates of the effects of stricter financial-privacy laws on mortgage denial rates during 2001?2006. Consistent with the model's predictions, denial rates for home-purchase loans and refinancing loans decreased in counties where opt-in privacy ordinances were adopted. Moreover, estimated foreclosure start rates during the financial crisis of 2007?2008 were higher in counties where the privacy ordinance was adopted.},
+  doi      = {10.1111/1756-2171.12083},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1756-2171.12083},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1756-2171.12083},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
