--- a/library.bib
+++ b/library.bib
@@ -1,15 +1,5 @@
 % Encoding: ISO-8859-1
 
-@book{OECD:DDI:2015,
-author = "OECD",
-title = "Data-Driven Innovation",
-year = "2015",
-pages = 456,
-url = "https://www.oecd-ilibrary.org/content/publication/9789264229358-en",
-doi = "https://doi.org/https://doi.org/10.1787/9789264229358-en",
-keyword = {demand for data}
-}
-
 @Book{GolubVanLoan:MatrixComputations:1996,
   title     = {Matrix Computations, Third Edition},
   publisher = {The Johns Hopkins University Press},
@@ -695,12 +685,6 @@ eprint = {
   number={4},
   pages={8--32},
   year={2006}
-}
-
-@MISC{Mcfadden97measuringwillingness-to-pay,
-    author = {Daniel Mcfadden},
-    title = {Measuring Willingness-To-Pay For Transportation Improvements},
-    year = {1997}
 }
 
 @article{dwork-et-al-1411.2664,
@@ -5169,7 +5153,7 @@ month={4},}
   booktitle = {Theoretical Foundations of Travel Choice Modeling},
   publisher = {Emerald},
   year      = {1998},
-  editor    = {Tommy Garling and Thomas Laitila, and Kerstin Westin},
+  editor    = {Tommy Garling and Thomas Laitila and Kerstin Westin},
   owner     = {vilhuber},
   timestamp = {2017.12.22},
 }
@@ -5750,6 +5734,16 @@ month={7},
   doi      = {10.1111/1756-2171.12083},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1756-2171.12083},
   url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1756-2171.12083},
+}
+
+@Book{OECD:DDI:2015,
+  title   = {Data-Driven Innovation},
+  year    = {2015},
+  author  = {OECD},
+  doi     = {https://doi.org/https://doi.org/10.1787/9789264229358-en},
+  keyword = {demand for data},
+  pages   = {456},
+  url     = {https://www.oecd-ilibrary.org/content/publication/9789264229358-en},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
